Create a delegate interface for clients, to isolate from lsp4j